--- a/matchtheshape.html
+++ b/matchtheshape.html
@@ -7,6 +7,9 @@
     <meta charset="utf-8" />
 
   </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
   <body>
     <script src="matchtheshape.js"></script>
   </body>
