back and home button

--- a/colorMe_1.html
+++ b/colorMe_1.html
@@ -11,6 +11,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
   <body>
-    <script src="colormeright.js"></script>
+    <script src="colorMe_1.js"></script>
   </body>
 </html>
