--- a/matchtheshape.html
+++ b/matchtheshape.html
@@ -11,6 +11,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
   <body>
-    <script src="matchtheshape.js"></script>
+    <script src="matchTheShapeTest.js"></script>
   </body>
 </html>
